[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/particles/bullet_9mm.png" type="Texture" id=1]
[ext_resource path="res://scripts/Bullet_9mm.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "OnMove",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 1 )

[node name="Bullet_9mm" type="Area2D"]
script = ExtResource( 2 )

[node name="BulletAnimation" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "OnMove"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false

[node name="Position2D" type="Position2D" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Bullet_9mm_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Bullet_9mm_body_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
